<resources>
    <string name="app_name">Simple Calculator</string>
    <string name="calculator_header">Calculator</string>
    <string name="defaultValue">0</string>
    <string name="btn_1">1</string>
    <string name="btn_2">2</string>
    <string name="btn_3">3</string>
    <string name="btn_4">4</string>
    <string name="btn_5">5</string>
    <string name="btn_6">6</string>
    <string name="btn_7">7</string>
    <string name="btn_8">8</string>
    <string name="btn_9">9</string>
    <string name="btn_PlusMinus">+/-</string>
    <string name="btn_0">0</string>
    <string name="btn_Point">.</string>
    <string name="btn_Plus">+</string>
    <string name="btn_Minus">-</string>
    <string name="btn_Mult">x</string>
    <string name="btn_Div">/</string>
    <string name="btn_ClearEntry">CE</string>
    <string name="btn_ClearAll">C</string>
    <string name="btn_Equals">=</string>
</resources>
